<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_blue"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tk"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/mini_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mini_title_tk"
        android:textColor="#201E1E"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_below="@+id/title"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mini_title"
        android:background="@color/white"
        android:columnCount="4"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/id_table"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:background="@color/light_smoke"
            android:gravity="center"
            android:text="@string/table_col1"
            android:textColor="@color/purple_500" />

        <TextView
            android:id="@+id/name_table"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:background="@color/light_smoke"
            android:gravity="center"
            android:text="@string/table_col2"
            android:textColor="@color/purple_500" />

        <TextView
            android:id="@+id/sl_table"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:background="@color/light_smoke"
            android:gravity="center"
            android:text="@string/table_col3"
            android:textColor="@color/purple_500" />

        <TextView
            android:id="@+id/inYear_table"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:background="@color/light_smoke"
            android:gravity="center"
            android:text="@string/table_col4"
            android:textColor="@color/purple_500" />

    </GridLayout>

    <ListView
        android:id="@+id/list_tk"
        android:layout_width="326dp"
        android:layout_height="316dp"
        android:layout_below="@+id/mini_title"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:padding="2dp" />

    <Button
        android:id="@+id/barchart_inTK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Biểu đồ thống kê"
        android:layout_gravity="center"
        android:textSize="15sp" />

</LinearLayout>